--- a/public/account.html
+++ b/public/account.html
@@ -16,7 +16,13 @@
 <body class="dark account-page">
 
   <header class="site-header">
-    <a href="/index.html" class="logo"><img src="/img/gfdaw-removebg-preview.png" alt="AI TRAFFIC JAMAICA" /><span class="logo-title">AI TRAFFIC JAMAICA</span></a>
+    <a href="/index.html" class="logo">
+      <span class="logo-img-wrap">
+        <img class="logo-icon" src="/img/iconinframes.png" alt="AI TRAFFIC JAMAICA" />
+        <img class="logo-ai-frame" src="/img/aiframes.png" alt="" aria-hidden="true" />
+      </span>
+      <span class="logo-title">AI TRAFFIC JAMAICA</span>
+    </a>
     <nav>
       <a id="account-nav-admin" href="/admin.html" class="hidden">Admin</a>
       <a href="/index.html">Live</a>
@@ -30,44 +36,102 @@
 
   <main class="account-main">
 
-    <section class="account-profile-card">
-      <div class="profile-avatar-wrap">
-        <img id="profile-avatar-img" class="profile-avatar" alt="Profile avatar" />
-        <label for="profile-avatar-input" class="btn-secondary profile-avatar-btn">Upload</label>
+    <!-- ── Hero card ─────────────────────────────────────────── -->
+    <div class="acc-hero-card">
+
+      <!-- Avatar (click to upload) -->
+      <div class="acc-avatar-wrap" id="acc-avatar-wrap" title="Change avatar">
+        <img id="profile-avatar-img" class="acc-avatar" alt="Avatar" />
+        <div class="acc-avatar-overlay" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" width="18" height="18">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+            <polyline points="17 8 12 3 7 8"/>
+            <line x1="12" y1="3" x2="12" y2="15"/>
+          </svg>
+        </div>
         <input id="profile-avatar-input" type="file" accept="image/png,image/jpeg,image/webp,image/svg+xml" class="hidden" />
       </div>
-      <div class="profile-fields">
-        <div class="field" style="margin-bottom:10px;">
-          <label for="profile-username">Username</label>
-          <input id="profile-username" type="text" maxlength="32" placeholder="Your username" />
+
+      <!-- Identity + balance -->
+      <div class="acc-hero-info">
+        <div class="acc-username-view" id="acc-username-view">
+          <span id="acc-username-display" class="acc-username-display" title="Click to edit">—</span>
+          <button class="acc-edit-btn" id="acc-edit-username-btn" title="Edit username">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" width="11" height="11" aria-hidden="true">
+              <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+              <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+            </svg>
+          </button>
         </div>
-        <div class="profile-actions">
-          <button id="btn-save-profile" class="btn-primary">Save Profile</button>
-          <span id="profile-msg" class="muted"></span>
+        <div id="acc-username-edit" class="acc-username-edit hidden">
+          <input id="profile-username" type="text" maxlength="32" placeholder="Username" class="acc-username-input" />
+          <button id="btn-save-profile" class="btn-primary acc-save-btn">Save</button>
+          <button id="acc-cancel-edit-btn" class="btn-secondary acc-save-btn">✕</button>
+          <span id="profile-msg" class="muted acc-save-msg"></span>
+        </div>
+        <div class="acc-balance-row">
+          <span id="balance-display" class="acc-balance-val">—</span>
+          <span class="acc-balance-unit">PTS</span>
+          <span id="account-ws-status" class="acc-ws-dot" title="Connecting…"></span>
         </div>
       </div>
-    </section>
 
-    <section class="account-balance-card">
-      <div class="balance-label">Virtual Balance</div>
-      <div id="balance-display" class="balance-value">-</div>
-      <div class="balance-currency">credits</div>
-      <div id="account-ws-status" class="ws-status ws-err">Connecting...</div>
-    </section>
-
-    <section class="account-history">
-      <h2>Pending Bets</h2>
-      <div id="pending-container">
-        <p class="loading">Loading pending bets...</p>
+      <!-- Stat tiles -->
+      <div class="acc-stat-tiles">
+        <div class="acc-stat-tile">
+          <span id="stat-total" class="acc-stat-val">—</span>
+          <span class="acc-stat-label">Guesses</span>
+        </div>
+        <div class="acc-stat-tile">
+          <span id="stat-wins" class="acc-stat-val">—</span>
+          <span class="acc-stat-label">Won</span>
+        </div>
+        <div class="acc-stat-tile">
+          <span id="stat-rate" class="acc-stat-val">—</span>
+          <span class="acc-stat-label">Win Rate</span>
+        </div>
+        <div class="acc-stat-tile">
+          <span id="stat-exact" class="acc-stat-val">—</span>
+          <span class="acc-stat-label">Exact</span>
+        </div>
       </div>
-    </section>
+    </div>
 
-    <section class="account-history">
-      <h2>Bet History</h2>
-      <div id="history-container">
-        <p class="loading">Loading...</p>
+    <!-- ── Tabs ───────────────────────────────────────────────── -->
+    <div class="acc-tabs">
+      <button class="acc-tab-btn active" data-acctab="history">Guess History</button>
+      <button class="acc-tab-btn" data-acctab="pending">Pending</button>
+      <button class="acc-tab-btn" data-acctab="settings">Settings</button>
+    </div>
+
+    <!-- ── Tab: History ──────────────────────────────────────── -->
+    <div id="acc-tab-history" class="acc-tab-panel">
+      <div id="history-container"><p class="loading">Loading…</p></div>
+    </div>
+
+    <!-- ── Tab: Pending ──────────────────────────────────────── -->
+    <div id="acc-tab-pending" class="acc-tab-panel hidden">
+      <div id="pending-container"><p class="loading">Loading…</p></div>
+    </div>
+
+    <!-- ── Tab: Settings ─────────────────────────────────────── -->
+    <div id="acc-tab-settings" class="acc-tab-panel hidden">
+      <div class="acc-settings-section">
+        <div class="acc-settings-title">Account Info</div>
+        <div class="acc-settings-row">
+          <span class="acc-settings-key">Email</span>
+          <span id="acc-settings-email" class="acc-settings-val">—</span>
+        </div>
+        <div class="acc-settings-row">
+          <span class="acc-settings-key">Member since</span>
+          <span id="acc-settings-since" class="acc-settings-val">—</span>
+        </div>
+        <div class="acc-settings-row">
+          <span class="acc-settings-key">User ID</span>
+          <span id="acc-settings-uid" class="acc-settings-val acc-uid-mono">—</span>
+        </div>
       </div>
-    </section>
+    </div>
 
   </main>
 
@@ -79,4 +143,3 @@
   <script src="/js/account-init.js"></script>
 </body>
 </html>
-
