--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       <span class="logo-title">AI TRAFFIC JAMAICA</span>
     </a>
     <nav>
-      <span id="nav-balance" class="nav-balance hidden"></span>
+      <span id="nav-balance" class="nav-balance hidden">
+        <span id="nav-balance-val">0</span><span class="nav-balance-label">PTS</span>
+      </span>
       <span id="nav-auth">
         <button id="btn-open-login" class="nav-login-btn" title="Login">Login</button>
         <button id="btn-open-register" class="nav-icon-btn nav-icon-register" title="Create account">
@@ -95,6 +97,8 @@
         </div>
 
         <div id="count-widget" class="count-widget">
+
+          <span class="cw-widget-label">LIVE COUNT</span>
 
           <!-- Normal mode: global total + breakdown -->
           <div id="cw-normal" class="cw-normal-wrap">
@@ -175,6 +179,14 @@
           <p id="ml-hud-msg" class="ml-hud-msg">Initializing live scene scan...</p>
           <p id="ml-hud-bot" class="ml-hud-bot"></p>
           <p id="ml-hud-verbose" class="ml-hud-verbose">Scene lock scanning | retrain idle | scene --</p>
+
+          <!-- Weather row: icon + status merged -->
+          <div class="ml-hud-weather">
+            <svg class="ml-wx-icon" viewBox="0 0 256 256" fill="currentColor" aria-hidden="true">
+              <path id="ml-hud-wx-path" d=""/>
+            </svg>
+            <span id="ml-hud-wx-label" class="ml-hud-wx-label">—</span>
+          </div>
 
           <div class="ml-hud-chips">
             <span class="ml-chip">
@@ -277,6 +289,10 @@
       </div>
 
       <div id="tab-chat" class="tab-content">
+        <div class="chat-tab-header yolo-label yolo-label-cyan">
+          <svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
+          <span>LIVE CHAT</span>
+        </div>
         <div class="chat-meta-row">
           <span id="chat-online-count" class="chat-online-count">0 online</span>
           <div id="chat-online-users" class="chat-online-users"></div>
@@ -426,6 +442,33 @@
           </div>
           <p id="bp-active-hint" class="bpa-hint">Your guess is locked in. AI is counting...</p>
         </div>
+
+        <!-- ── Inline result (replaces toast) ──────────────────── -->
+        <div id="bp-result" class="bp-result hidden">
+          <div class="bpr-status-row">
+            <span id="bpr-badge" class="bpr-badge bpr-badge-miss">MISS</span>
+            <span id="bpr-pts" class="bpr-pts">No pts</span>
+          </div>
+          <div class="bpa-receipt">
+            <div class="bpa-receipt-row">
+              <span>Your guess</span>
+              <strong id="bpr-guess">—</strong>
+            </div>
+            <div class="bpa-receipt-row">
+              <span>Actual count</span>
+              <strong id="bpr-actual">—</strong>
+            </div>
+            <div class="bpa-receipt-row">
+              <span>Points earned</span>
+              <strong id="bpr-payout">—</strong>
+            </div>
+          </div>
+          <div class="bpr-actions">
+            <button id="bpr-leaderboard-btn" class="btn-secondary bpr-btn">View Standing</button>
+            <button id="bpr-again-btn" class="btn-primary bpr-btn">Guess Again</button>
+          </div>
+        </div>
+
       </div>
 
     </aside>
